[package]
name = "async-observer"
version = "0.1.0"
edition = "2021"
authors = ["Leonard Seibold <leo@zrtx.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ['full'] }
async-trait = "0.1.53"
thiserror = "1.0.30"